security/rubygem-brakeman: Add rubygem-brakeman 6.2.1
Brakeman is a static analysis tool which checks Ruby on Rails applications for
security vulnerabilities.

--- a/security/Makefile
+++ b/security/Makefile
@@ -1119,6 +1119,7 @@
     SUBDIR += rubygem-bcrypt
     SUBDIR += rubygem-bcrypt-ruby
     SUBDIR += rubygem-bcrypt_pbkdf
+    SUBDIR += rubygem-brakeman
     SUBDIR += rubygem-cancancan
     SUBDIR += rubygem-cose
     SUBDIR += rubygem-cvss-suite
